--- a/src/cadastro.css
+++ b/src/cadastro.css
@@ -9,4 +9,20 @@
         font-family: "Inter", sans-serif;
     }
 
+    #imagem2 {
+        width: 40%; 
+        float: left;
+      }
+
+    #login2 {
+            position:relative;
+            left:10px;            
+            top: 30px;            
+            float:left;
+            display: table-cell;
+            justify-content: center;
+            
+          }
+          
+    
    
